--- a/pom.xml
+++ b/pom.xml
@@ -45,5 +45,10 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.11.3</version>
 		</dependency>
+		<dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-firestore</artifactId>
+            <version>2.1.0</version>
+        </dependency>
 	</dependencies>
 </project>
